plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.9'
}

group 'edu.cmu.tranx'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.json:json:20180813'
    testImplementation 'junit:junit:4.12'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2019.2'
}
patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}